--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ allprojects {
 //        }
 //        jcenter()   //////??????Please remove usages of `jcenter()` Maven repository from your build scripts and migrate your build to other Maven repositories. This repository is deprecated and it will be shut down in the future
 
-        //////??????TODO: Remove jcenter() once available in Maven Central.
-        jcenter() {
-            content {
-            }
-        }
+//        //////??????TODO: Remove jcenter() once available in Maven Central.
+//        jcenter() {
+//            content {
+//            }
+//        }
     }
 }
 
